--- a/Frontend/src/app/pages/signup/signup.component.css
+++ b/Frontend/src/app/pages/signup/signup.component.css
@@ -4,10 +4,11 @@
   form{
     margin-left: 25%;
     margin-right: 25%;
+    margin-top: 100px;
   }
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: 400px) {
     .md-3, input[type=submit] {
       width: 100%;
-      margin-top: 0;
+      margin-top: 0px;
     }
   }
