--- a/Frontend/src/app/pages/signup/signup.component.html
+++ b/Frontend/src/app/pages/signup/signup.component.html
@@ -17,37 +17,17 @@
           <div class="mb-3">
               <mat-form-field class="example-full-width" appearance="fill" style="width:100% ;">
                 <mat-label>Username</mat-label>
-                <input matInput placeholder="Please type your Email" required class="form-control" formControlName="email"[ngClass]="{ 'is-invalid': submitted && f['email'].errors }" class="FormControl">
+                <input matInput placeholder="abc@mail.com" required class="form-control" formControlName="username"[ngClass]="{ 'is-invalid': submitted && f['email'].errors }" class="FormControl">
                 <div *ngIf="submitted && f['email'].errors" class="invalid-feedback">
                   <div *ngIf="f['email'].errors['required']">Email is required</div>
                   <div *ngIf="f['email'].errors['email']">Email must be a valid email address</div>
               </div>
               </mat-form-field> 
           </div>
-          <div class="mb-3">
-              <label id="example-radio-group-label">Select your gender</label><br><br>
-              <mat-radio-group aria-labelledby="example-radio-group-label" class="example-radio-group" style="width: 100%;padding: 1px;" >
-                <mat-radio-button class="example-radio-button" *ngFor="let gender of genders" [value]="gender">
-                  {{gender}}
-                </mat-radio-button>
-              </mat-radio-group>
-          </div>
-          <br>
-          <div class="mb-3">
-              <label id="example-radio-group-label">Select your date of birth</label>
-  <br>
-              <mat-form-field appearance="fill">
-                  <mat-label>Choose a date</mat-label>
-                  <input matInput [matDatepicker]="picker" required>
-                  <mat-hint>MM/DD/YYYY</mat-hint>
-                  <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                  <mat-datepicker #picker></mat-datepicker>
-                </mat-form-field>    
-          </div>
-          <div class="mb-3">
+                  <div class="mb-3">
               <mat-form-field class="example-full-width" appearance="fill" style="width:100% ;">
                 <mat-label>Phone Number</mat-label>
-                <input matInput placeholder="" (keypress)="keyPress($event)" required type="text" formControlName="phonenumber" class="form-control" placeholder="Enter Your phone Number" [ngClass]="{ 'is-invalid': submitted && f['phonenumber'].errors }" >
+                <input matInput placeholder="Phone Number" (keypress)="keyPress($event)" required type="text" formControlName="phonenumber" class="form-control" placeholder="Enter Your phone Number" [ngClass]="{ 'is-invalid': submitted && f['phonenumber'].errors }" >
                <div *ngIf="submitted && f['phonenumber'].errors" class="invalid-feedback">
       <div *ngIf="f['phonenumber'].errors && f['phonenumber'].errors['required']">Phone number is required</div>
       <div *ngIf="f['phonenumber'].errors && f['phonenumber'].errors['pattern'] || f['phonenumber'].errors && f['phonenumber'].errors['maxlength'] || f['phonenumber'].errors && f['phonenumber'].errors['minlength']">Phone number must be at least 10 numbers</div>
@@ -57,7 +37,7 @@
       <div class="mb-3">
           <mat-form-field class="example-full-width" appearance="fill" style="width:100% ;">
             <mat-label>Password</mat-label>
-            <input matInput type="password" placeholder="password" class="form-control" required>
+            <input matInput type="password" placeholder="********" class="form-control" required formControlName="password" [ngClass]="{ 'is-invalid': submitted && f['password'].errors }" >
             <div *ngIf="submitted && f['password'].errors" class="invalid-feedback">
               <div *ngIf="f['password'].errors['required']">Password is required</div>
               <div *ngIf="f['password'].errors['minlength']">Password must be at least 6 characters</div>
@@ -67,20 +47,22 @@
       <div class="mb-3">
           <mat-form-field class="example-full-width" appearance="fill" style="width:100% ;">
             <mat-label>Confirm Password</mat-label>
-            <input matInput type="password" placeholder="Re-enter password" class="form-control" required>
+            <input matInput type="password" placeholder="********" class="form-control" required formControlName="confirmPassword" [ngClass]="{ 'is-invalid': submitted && f['confirmPassword'].errors }">
             <div *ngIf="submitted && f['confirmPassword'].errors" class="invalid-feedback">
               <div *ngIf="f['confirmPassword'].errors['required']">Confirm Password is required</div>
               <div *ngIf="f['confirmPassword'].errors['mustMatch']">Passwords must match</div>
           </div>
           </mat-form-field> 
       </div>
+      <mat-label style="color: red; font-size:smaller">fields marked with * are mandatory!</mat-label>
       <div class="mb-3" style=" display: table-cell; width: 490px; padding-left: 8rem;">
-          <button mat-raised-button style="border-radius: 5px; ">Sign Up</button>
+          <button mat-raised-button style="border-radius: 6px; margin-left: 90px; margin-right:50px; color: white;background-color: black;  ">Sign Up</button>
+          <button mat-raised-button style="border-radius: 6px;background-color: black;"><a href="login" style="color: white;text-decoration:none;">Log in</a> </button>
       </div>
       </div>
-      <div class="mb-3" style=" display: inline; width: 490px; padding-left: 8rem;">
-        <button mat-raised-button style="border-radius: 5px;"><a href="login" style="text-decoration:none;color: black;">Log in</a> </button>
-    </div>
+      <!-- <div class="mb-3" style=" display: inline; width: 490px; padding-left: 8rem;">
+       
+    </div> -->
     </mat-card>  
     </form>
   </div>
