--- a/Frontend/src/app/pages/signup/signup.component.html
+++ b/Frontend/src/app/pages/signup/signup.component.html
@@ -9,8 +9,8 @@
                   <mat-form-field class="example-full-width" appearance="fill" style="width:100% ;">
                     <mat-label>Name</mat-label>
                     <input matInput placeholder="Type your name here !" class="form-control" name="name" [(ngModel)]="user.name"
-                    [class.is-invalid]="name.invalid && name.touched" #name="ngModel" required>
-                      <div [class.d-none]="name.valid||name.untouched">Name is required</div>
+                    [class.is-invalid]="name.invalid && name.touched" #name="ngModel" required pattern="[a-zA-Z]+" >
+                      <div [class.d-none]="name.valid||name.untouched">Name Invalid</div>
                   </mat-form-field> 
           </div>
           <div class="mb-3">
@@ -19,7 +19,7 @@
                 <input matInput placeholder="abc@mail.com" type="email" class="form-control" [(ngModel)]="user.email" name="email"
                 #email="ngModel" [class.is-invalid]="email.invalid && email.touched"
                 id="exampleInputEmail1"  required pattern="^[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,4}$">
-                  <div [class.d-none]="email.valid || email.untouched">Email must be a valid email address</div>
+                  <div [class.d-none]="email.valid || email.untouched">Email invalid</div>
               </mat-form-field> 
           </div>
                   <div class="mb-3">
@@ -27,8 +27,8 @@
                 <mat-label>Phone Number</mat-label>
                 <input matInput placeholder="Phone Number" type="text" (keypress)="keyPress($event)" class="form-control" name="Phonenumber" [(ngModel)]="user.phonenumber"
                 [class.is-invalid]="phonenumber.invalid && phonenumber.touched" #phonenumber="ngModel"
-                required >
-      <div [class.d-none]="phonenumber.valid||phonenumber.untouched">Phone number is required</div>
+                required minlength="10" maxlength="10">
+      <div [class.d-none]="phonenumber.valid||phonenumber.untouched">Phone number invalid</div>
 
               </mat-form-field> 
       </div>
@@ -36,16 +36,11 @@
           <mat-form-field class="example-full-width" appearance="fill" style="width:100% ;">
             <mat-label>Password</mat-label>
             <input matInput type="password" placeholder="********" class="form-control" [(ngModel)]="user.password"
-            name="password" #password="ngModel" [class.is-invalid]="password.invalid && password.touched" required minlength="8">
+            name="password" #password="ngModel" [class.is-invalid]="password.invalid && password.touched" required pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%?&])[A-Za-z\d$@$!%?&]{8,}$" minlength="8">
               <div [class.d-none]="password.valid || password.untouched">Password invalid</div>
           </mat-form-field> 
       </div>
-      <div class="mb-3">
-          <mat-form-field class="example-full-width" appearance="fill" style="width:100% ;">
-            <mat-label>Confirm Password</mat-label>
-            <input matInput type="password" placeholder="********" class="form-control" (keypress)="MustMatch(user.password,user.confirmpassword)" required formControlName="confirmPassword" >
-            </mat-form-field> 
-      </div>
+
       <mat-label style="color: red; font-size:smaller">fields marked with * are mandatory!</mat-label>
       <div class="mb-3" style=" display: table-cell; width: 490px; padding-left: 8rem;">
           <button mat-raised-button style="border-radius: 6px; margin-right:50px; color: white;background-color: black;  ">Sign Up</button>
