--- a/Frontend/src/app/pages/login/login.component.html
+++ b/Frontend/src/app/pages/login/login.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <form (ngSubmit)="loginUser()">
     <div class="container">
       <h1>Log in</h1>
@@ -21,3 +21,4 @@
                       <p class="mt-4">Don't have an account?<a routerLink="/signup" class="" style="text-decoration: none;"> Sign Up</a> </p>
     </div>
   </form>
+<app-footer></app-footer>
