--- a/Frontend/src/app/pages/signup/signup.component.html
+++ b/Frontend/src/app/pages/signup/signup.component.html
@@ -1,5 +1,5 @@
 
- 
+ <app-header></app-header>
 <div class="container" >
     <form class="example-form" (ngSubmit)="onSubmit()" #userlogin="ngForm" >
     <mat-card>
@@ -50,3 +50,4 @@
     </mat-card>  
     </form>
   </div>
+<app-footer></app-footer>
