--- a/Frontend/src/app/facultynav/facultynav.component.html
+++ b/Frontend/src/app/facultynav/facultynav.component.html
@@ -7,16 +7,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Faculty Dashboard</a>
+          <a class="nav-link" routerLink="#">Faculty Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/viewrequirements">View Requirements</a>
+          <a class="nav-link" routerLink="/viewrequirements">View Requirements</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Past Curriculum</a>
+          <a class="nav-link" routerLink="/pastcurriculum">Past Curriculum</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/logout">Log Out</a>
+          <a class="nav-link " routerLink="">Log Out</a>
         </li>
       </ul>
     </div>
