--- a/Frontend/src/app/navbar/navbar.component.html
+++ b/Frontend/src/app/navbar/navbar.component.html
@@ -6,16 +6,16 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Admin Dashboard</a>
+          <a class="nav-link" routerLink="/adminhome">Admin Dashboard</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/requireform">Add Requirements</a>
+          <a class="nav-link" routerLink="/requireform">Add Requirements</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Curriculum</a>
+          <a class="nav-link" routerLink="/admincurriculum">Curriculum</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/logout">Log Out</a>
+          <a class="nav-link " routerLink="">Log Out</a>
         </li>
       </ul>
     </div>
