--- a/Frontend/src/app/pages/home/home.component.html
+++ b/Frontend/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-
+<app-header></app-header>
 <div class="container pt-5 mt-10 mr-3 ml-3">
     <h1 id="heading1">ICTAK CURRICULUM TRACKER</h1>
     <h5 id="heading2">Admin & Faculty</h5>
@@ -10,4 +10,4 @@
     </div>
 </div>
 
-
+<app-footer></app-footer>
