--- a/Frontend/src/app/pages/view-requirements/view-requirements.component.html
+++ b/Frontend/src/app/pages/view-requirements/view-requirements.component.html
@@ -1,11 +1,8 @@
-<<<<<<< Updated upstream
 <app-facultynav></app-facultynav>
-=======
 
->>>>>>> Stashed changes
-<h2>View Requirements</h2>
+<h2 style="color: white ;">View Requirements</h2>
 <div class="container pt-5">
-<table class="table table-striped">
+<table class="table">
     <thead class="heading">
       <tr class="table-dark" style="text-align:center;">
         <th scope="col">Sl No.</th>
@@ -18,8 +15,7 @@
         <th scope="col">Action</th>
       </tr>
     </thead>
-    <tbody>
-<<<<<<< Updated upstream
+    <tbody style="color: white;">
          <tr style="text-align:center;" *ngFor="let requirement of requirements;let i= index"> 
              <th scope="row">{{i+1}}</th>
         <td>{{requirement.name}}</td>
@@ -27,27 +23,10 @@
         <td>{{requirement.ic}}</td>
         <td>{{requirement.category}}</td>
         <td>{{requirement.hour}}</td>
-        <td><a href="{{apiservice.fileAddress}}/{{requirement.ref}}" target="_blank">{{requirement.ref}}</a></td>
+        <td ><a href="{{apiservice.fileAddress}}/{{requirement.ref}}" target="_blank" style="color: yellow;">{{requirement.ref}}</a></td>
          <td>  
-                
-                <button type="button" class="btn btn-success">Response</button>
-            </td>
-=======
-         <!-- <tr > 
-             <th scope="row">{{i+1}}</th>
-        <td>{{requirement.name}}</td>
-        <td>{{requirement.area}}</td>
-        <td>{{requirement.hours}}</td>
-        <td>{{requirement.reference}}</td>
-         <td>   -->
-                
-                <button type="button"class="btn btn-success">Response</button>
-            <!-- </td>
->>>>>>> Stashed changes
-
-            
-          </tr>
-       -->
+              <button type="button" (click)="getrequire(requirement._id)" class="btn btn-success">Response</button>
+          </td>
     </tbody>
   </table>
 </div>
