--- a/Frontend/src/app/facultynav/facultynav.component.html
+++ b/Frontend/src/app/facultynav/facultynav.component.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
-          <a class="nav-link" routerLink="#">Faculty Dashboard</a>
+          <a class="nav-link" routerLink="/facultyhome">Faculty Dashboard</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" routerLink="/viewrequirements">View Requirements</a>
